--- a/android_app/app/src/main/res/layout/item_account_card.xml
+++ b/android_app/app/src/main/res/layout/item_account_card.xml
@@ -12,7 +12,7 @@
         android:padding="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="space-between|center_vertical">
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/usernameText"
